[Feat] 새로운 맛집 등록 API (#41)
* ✨ test: 새로운 맛집 저장 테스트 - #33

* ✨ feat: Matzip Request Dto 생성 - #33

* ✨ feat: 맛집 저장 서비스 로직 구현 - #33

* ✨ feat: 맛집 저장 컨트롤러 구현 - #33

* ✨ refactor: 불필요한 공백 삭제

* ✨ refactor: import 추가

* ✨ refactor: 맛집 생성자 변경

- 조회수와 평점은 처음 만들 시에 0이므로 파라미터에서 제거

* ✨ refactor: sonarLint 피드백 적용

* ✨ refactor: 메서드 네이밍 오타 수정

* ✨ refactor: 컨트롤러 메서드 명을 좀 더 자세히 변경

- register라는 이름은 너무 모호하다는 피드백 반영

* ✨ refactor: 바뀐 메서드 명에 따른 코드 수정

* ✨ refactor: 바뀐 메서드 명에 따른 코드 수정 및 테스트 코드에 given 추가

* ✨ refactor: 테스트 클래스 필드에도 private 접근 제어자 추가

* ✨ refactor: Google Code Style 적용